Update half-life page to be consistent with other templates

--- a/game-pages/half-life-two.html
+++ b/game-pages/half-life-two.html
@@ -4,22 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Half-Life 2</title>
+    <title>Half-Life</title>
 </head>
 <body>
-    <h1>Half Life 2</h1>
-    <img src="../img/half-life-two.png" alt="Protagonist bearded male holds crowbar weapon with fearless female protagonist admist a blinding white background."
-    <h2><p>It doesn't do a whole lot differently than other games in the shooter genre in terms of pure gameplay innovation, but it takes existing styles, then mixes, matches and makes them better. It sets the standard in all areas, especially the use of physics as a gameplay tool instead of merely a visual treat for gamers. If you're a fan of Half-Life, action games in general, or are looking for a way to get into PC gaming, this is it. It'll hook you, reel you in, and hold you captive for serious hours of hardcore brilliance. This is gaming at its best and shows that the future holds no bounds when the might of technology, precision of design, and touch of artistry work in tandem.</p></h2>
+    <h1>Half-Life</h1>
+    <img src="../img/half-life-two.png" alt="A bearded man stands in front of a white background, crowbar in hand, aided by his female ally."
+    <p></p>
+    <p><strong>The Half-Life series, developed by Valve Corporation, is a groundbreaking first-person shooter (FPS) franchise that has left a lasting impact on the gaming industry since its debut in 1998. Set in a science fiction universe, the series follows the story of Gordon Freeman, a theoretical physicist who becomes entangled in a desperate struggle for survival after a catastrophic experiment at the Black Mesa Research Facility inadvertently opens a portal to another dimension. The series is celebrated for its immersive storytelling, engaging gameplay, and innovative design, which seamlessly blends action, exploration, and puzzle-solving elements.</strong></p>
+    <p><strong>The Half-Life series has been praised for its pioneering approach to environmental storytelling, with an emphasis on scripted sequences and minimal use of cutscenes. This narrative style allows players to remain immersed in the game world, experiencing the story from Gordon Freeman's perspective. Additionally, the series features a rich cast of characters, memorable environments, and a distinctive atmosphere that has captivated players for decades.</strong></p>
+    <p><strong>The series includes the original "Half-Life," its sequel "Half-Life 2," and several episodic expansions, such as "Half-Life 2: Episode One" and "Half-Life 2: Episode Two." After a long hiatus, Valve released "Half-Life: Alyx" in 2020, a VR-exclusive title that serves as a prequel to "Half-Life 2." With its innovative gameplay and engaging narratives, the Half-Life series has secured its place as a cornerstone of the FPS genre and continues to be held in high regard by fans and critics alike.</strong></p>
     <p><strong>Pros</strong></p>
     <ul>
-        <li><em>Tight Gameplay</em></li>
-        <li><em>Engaging Story</em></li>
-        <li><em>Great Mods</em></li>
+        <li><em>Immersive storytelling:</em> The Half-Life series is celebrated for its pioneering approach to environmental storytelling, with scripted sequences and minimal use of cutscenes, allowing players to remain fully immersed in the game world.</li>
+        <li><em>Engaging gameplay:</em> The games blend action, exploration, and puzzle-solving elements in a seamless manner, providing a balanced and entertaining gaming experience.</li>
+        <li><em>Innovative design:</em> The Half-Life series has consistently pushed the boundaries of the FPS genre, introducing new mechanics, physics-based interactions, and level designs that have influenced the broader gaming industry.</li>
+        <li><em>Memorable characters and atmosphere:</em> The series features a rich cast of characters, unique environments, and a distinctive atmosphere that has captivated players for decades.</li>
+        <li><em>High production values:</em> Valve is known for its commitment to quality, ensuring that each game in the series features top-notch graphics, sound design, and gameplay.</li>
+        <li><em>Impact on gaming culture:</em> The Half-Life series has left a lasting mark on the gaming industry and has inspired many subsequent games and franchises.</li>
+        <li><em>Modding community:</em> The series has a dedicated modding community, which has produced numerous custom game modes, maps, and modifications, extending the life and replayability of the games.</li>
     </ul>
     <p><strong>Cons</strong></p>
     <ul>
-        <li><em>Graphics May Seem Dated</em></li>
-        <li><em>Series Ends on a Cliffhanger</em></li>
+        <li><em>Long development times:</em> The Half-Life series is infamous for its long development times and delays between installments, which can be frustrating for fans awaiting new releases.</li>
+        <li><em>Unresolved storylines:</em> The story arc that began with "Half-Life 2" and continued through the episodic expansions remains unresolved, which may be disappointing for players invested in the narrative.</li>
+        <li><em>Inaccessible to some players:</em> The latest installment, "Half-Life: Alyx," is a VR-exclusive title, which may be a drawback for players who do not own a VR headset or prefer traditional gaming platforms.</li>
+        <li><em>Linear gameplay:</em> Some players may find the gameplay in the Half-Life series to be more linear and scripted compared to other contemporary FPS games that offer open-world or branching narrative experiences.</li>
+        <li><em>Aging graphics:</em> The graphics of the earlier games in the series may appear dated compared to modern gaming standards, which may be a barrier for new players looking to experience the series for the first time.ce.</li>
+        <li><em>Limited multiplayer offerings:</em> While the Half-Life series does have some multiplayer components, such as the spin-off "Half-Life: Deathmatch," the primary focus is on the single-player experience, which may be a drawback for players seeking a more multiplayer-oriented experience.</li>
     </ul>
 </body>
 </html>
