Fix formatting issues and typos - Correct Half-Life name to reflect series instead of 2

--- a/game-pages/final-fantasy.html
+++ b/game-pages/final-fantasy.html
@@ -29,7 +29,7 @@
         <li><em>High expectations:</em> Given the series' long-standing reputation and fanbase, new installments are often met with high expectations, which can lead to disappointment if they fail to meet those expectations.</li>
         <li><em>Frequent changes in gameplay mechanics:</em> While innovation is a strength of the series, it can also be a drawback for players who prefer consistency or who particularly enjoyed the mechanics of a specific game.</li>
         <li><em>Limited accessibility:</em> Some older games in the series may not be readily available on modern gaming platforms, making it difficult for new players to experience the entire series.</li>
-        <li><em>Focus on console gaming:</em> The series has traditionally been developed for consoles, and while some games have been ported to PC and mobile platforms, the primary focus on console gaming may be a drawback for those who primarily game on other platforms.ee</li>
+        <li><em>Focus on console gaming:</em> The series has traditionally been developed for consoles, and while some games have been ported to PC and mobile platforms, the primary focus on console gaming may be a drawback for those who primarily game on other platforms</li>
     </ul>
 </body>
 </html>
