--- a/game-pages/half-life-two.html
+++ b/game-pages/half-life-two.html
@@ -29,7 +29,7 @@
         <li><em>Unresolved storylines:</em> The story arc that began with "Half-Life 2" and continued through the episodic expansions remains unresolved, which may be disappointing for players invested in the narrative.</li>
         <li><em>Inaccessible to some players:</em> The latest installment, "Half-Life: Alyx," is a VR-exclusive title, which may be a drawback for players who do not own a VR headset or prefer traditional gaming platforms.</li>
         <li><em>Linear gameplay:</em> Some players may find the gameplay in the Half-Life series to be more linear and scripted compared to other contemporary FPS games that offer open-world or branching narrative experiences.</li>
-        <li><em>Aging graphics:</em> The graphics of the earlier games in the series may appear dated compared to modern gaming standards, which may be a barrier for new players looking to experience the series for the first time.ce.</li>
+        <li><em>Aging graphics:</em> The graphics of the earlier games in the series may appear dated compared to modern gaming standards, which may be a barrier for new players looking to experience the series for the first time</li>
         <li><em>Limited multiplayer offerings:</em> While the Half-Life series does have some multiplayer components, such as the spin-off "Half-Life: Deathmatch," the primary focus is on the single-player experience, which may be a drawback for players seeking a more multiplayer-oriented experience.</li>
     </ul>
 </body>
