--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <img src="./img/video-games-banner.jpg" alt="banner featuring several different video game covers"
             <h2><p>A collection of games for the uninitiated.</p></h2>
             <ol>
-                <li><a href="./game-pages/half-life-two.html">Half-Life 2</a></li>
+                <li><a href="./game-pages/half-life-two.html">Half-Life</a></li>
                 <li><a href="./game-pages/final-fantasy.html">Final Fantasy</a></li>
                 <li><a href="./game-pages/the-legend-of-zelda.html">The Legend of Zelda</a></li>
                 <li><a href ="./game-pages/star-wars.html">Star Wars</a></li>
