Remove repeated mention of game series name in pros and cons lists

--- a/game-pages/final-fantasy.html
+++ b/game-pages/final-fantasy.html
@@ -14,22 +14,22 @@
     <p><strong>Pros</strong></p>
     <ul>
         <li><em>Engaging storytelling:</em> Each game in the series offers a unique and captivating story that keeps players emotionally invested in the game world and its characters.</li>
-        <li><em>Memorable characters:</em> The series is known for its diverse and well-developed characters, which helps players form strong emotional connections and enhances their overall gaming experience.</li>
+        <li><em>Memorable characters:</em> Known for its diverse and well-developed characters, which helps players form strong emotional connections and enhances their overall gaming experience.</li>
         <li><em>Richly detailed worlds:</em> The intricate and immersive game worlds, complete with deep lore, provide players with a sense of wonder and a strong incentive to explore.</li>
-        <li><em>Innovative gameplay:</em>  Final Fantasy games have consistently introduced new gameplay mechanics, keeping each installment fresh and exciting for both new and returning players.</li>
-        <li><em>Iconic music:</em> The series features memorable and emotional soundtracks, which greatly enhance the overall experience and have become synonymous with Final Fantasy.</li>
+        <li><em>Innovative gameplay:</em>  Consistently introduced new gameplay mechanics, keeping each installment fresh and exciting for both new and returning players.</li>
+        <li><em>Iconic music:</em> Features memorable and emotional soundtracks, which greatly enhance the overall experience and have become synonymous with Final Fantasy.</li>
         <li><em>High production values:</em> Square Enix is known for its commitment to quality, ensuring that each game in the series features top-notch graphics, voice acting, and game design.</li>
         <li><em>Strong fan community:</em> The passionate fanbase has generated a wealth of fan art, fan fiction, and discussions that contribute to the series' enduring popularity.</li>
     </ul>
     <p><strong>Cons</strong></p>
     <ul>
-        <li><em>Complexity:</em> The series can be overwhelming for newcomers due to its extensive lore, numerous installments, and sometimes complex gameplay mechanics.</li>
+        <li><em>Complexity:</em> Can be overwhelming for newcomers due to its extensive lore, numerous installments, and sometimes complex gameplay mechanics.</li>
         <li><em>Inconsistency in quality:</em> While the series has many highly acclaimed entries, there are some that have received mixed reviews, leading to a varied reception.</li>
         <li><em>Time investment:</em> Many Final Fantasy games require a significant amount of time to complete, which can be a barrier for players with limited gaming time.</li>
         <li><em>High expectations:</em> Given the series' long-standing reputation and fanbase, new installments are often met with high expectations, which can lead to disappointment if they fail to meet those expectations.</li>
         <li><em>Frequent changes in gameplay mechanics:</em> While innovation is a strength of the series, it can also be a drawback for players who prefer consistency or who particularly enjoyed the mechanics of a specific game.</li>
         <li><em>Limited accessibility:</em> Some older games in the series may not be readily available on modern gaming platforms, making it difficult for new players to experience the entire series.</li>
-        <li><em>Focus on console gaming:</em> The series has traditionally been developed for consoles, and while some games have been ported to PC and mobile platforms, the primary focus on console gaming may be a drawback for those who primarily game on other platforms</li>
+        <li><em>Focus on console gaming:</em> Traditionally been developed for consoles, and while some games have been ported to PC and mobile platforms, the primary focus on console gaming may be a drawback for those who primarily game on other platforms</li>
     </ul>
 </body>
 </html>
