--- a/game-pages/half-life-two.html
+++ b/game-pages/half-life-two.html
@@ -15,17 +15,17 @@
     <p><strong>The series includes the original "Half-Life," its sequel "Half-Life 2," and several episodic expansions, such as "Half-Life 2: Episode One" and "Half-Life 2: Episode Two." After a long hiatus, Valve released "Half-Life: Alyx" in 2020, a VR-exclusive title that serves as a prequel to "Half-Life 2." With its innovative gameplay and engaging narratives, the Half-Life series has secured its place as a cornerstone of the FPS genre and continues to be held in high regard by fans and critics alike.</strong></p>
     <p><strong>Pros</strong></p>
     <ul>
-        <li><em>Immersive storytelling:</em> The Half-Life series is celebrated for its pioneering approach to environmental storytelling, with scripted sequences and minimal use of cutscenes, allowing players to remain fully immersed in the game world.</li>
+        <li><em>Immersive storytelling:</em> Celebrated for its pioneering approach to environmental storytelling, with scripted sequences and minimal use of cutscenes, allowing players to remain fully immersed in the game world.</li>
         <li><em>Engaging gameplay:</em> The games blend action, exploration, and puzzle-solving elements in a seamless manner, providing a balanced and entertaining gaming experience.</li>
-        <li><em>Innovative design:</em> The Half-Life series has consistently pushed the boundaries of the FPS genre, introducing new mechanics, physics-based interactions, and level designs that have influenced the broader gaming industry.</li>
+        <li><em>Innovative design:</em> Consistently pushed the boundaries of the FPS genre, introducing new mechanics, physics-based interactions, and level designs that have influenced the broader gaming industry.</li>
         <li><em>Memorable characters and atmosphere:</em> The series features a rich cast of characters, unique environments, and a distinctive atmosphere that has captivated players for decades.</li>
         <li><em>High production values:</em> Valve is known for its commitment to quality, ensuring that each game in the series features top-notch graphics, sound design, and gameplay.</li>
-        <li><em>Impact on gaming culture:</em> The Half-Life series has left a lasting mark on the gaming industry and has inspired many subsequent games and franchises.</li>
-        <li><em>Modding community:</em> The series has a dedicated modding community, which has produced numerous custom game modes, maps, and modifications, extending the life and replayability of the games.</li>
+        <li><em>Impact on gaming culture:</em> Left a lasting mark on the gaming industry and has inspired many subsequent games and franchises.</li>
+        <li><em>Modding community:</em> Has a dedicated modding community, which has produced numerous custom game modes, maps, and modifications, extending the life and replayability of the games.</li>
     </ul>
     <p><strong>Cons</strong></p>
     <ul>
-        <li><em>Long development times:</em> The Half-Life series is infamous for its long development times and delays between installments, which can be frustrating for fans awaiting new releases.</li>
+        <li><em>Long development times:</em> Infamous for its long development times and delays between installments, which can be frustrating for fans awaiting new releases.</li>
         <li><em>Unresolved storylines:</em> The story arc that began with "Half-Life 2" and continued through the episodic expansions remains unresolved, which may be disappointing for players invested in the narrative.</li>
         <li><em>Inaccessible to some players:</em> The latest installment, "Half-Life: Alyx," is a VR-exclusive title, which may be a drawback for players who do not own a VR headset or prefer traditional gaming platforms.</li>
         <li><em>Linear gameplay:</em> Some players may find the gameplay in the Half-Life series to be more linear and scripted compared to other contemporary FPS games that offer open-world or branching narrative experiences.</li>
