--- a/game-pages/star-wars.html
+++ b/game-pages/star-wars.html
@@ -14,17 +14,17 @@
     <p><strong>From action-adventure games like "Star Wars Jedi: Fallen Order" to space combat simulators like "Star Wars: Squadrons," and from classic RPGs like "Star Wars: Knights of the Old Republic" to real-time strategy games like "Star Wars: Empire at War," the Star Wars video game library caters to a wide range of player preferences and interests. With their immersive storytelling, stunning visuals, and thrilling gameplay mechanics, Star Wars video games have captured the imaginations of fans, allowing them to experience the epic saga first-hand and contribute to the ongoing legacy of the franchise.</strong></p>
     <p><strong>Pros</strong></p>
     <ul>
-        <li><em>Expansive universe:</em> The Star Wars games take advantage of the rich and diverse universe established in the films, providing players with a wealth of stories, characters, and settings to explore.</li>
-        <li><em>Wide variety of genres:</em> The Star Wars game series includes titles in various genres, such as action-adventure, RPG, strategy, and space combat simulators, catering to a broad range of player interests and preferences.</li>
-        <li><em>Immersive storytelling:</em> Many Star Wars games feature engaging narratives that delve deeper into the franchise's lore, offering both new and existing fans the opportunity to experience fresh stories and perspectives.</li>
-        <li><em>Iconic characters and locations:</em> Star Wars games often include familiar characters and locations from the films, allowing players to interact with their favorite heroes, villains, and worlds.</li>
-        <li><em>High production values:</em> Many Star Wars games feature impressive graphics, sound design, and gameplay mechanics, providing a polished and immersive gaming experience.</li>
+        <li><em>Expansive universe:</em> Take advantage of the rich and diverse universe established in the films, providing players with a wealth of stories, characters, and settings to explore.</li>
+        <li><em>Wide variety of genres:</em> Includes titles in various genres, such as action-adventure, RPG, strategy, and space combat simulators, catering to a broad range of player interests and preferences.</li>
+        <li><em>Immersive storytelling:</em> Feature engaging narratives that delve deeper into the franchise's lore, offering both new and existing fans the opportunity to experience fresh stories and perspectives.</li>
+        <li><em>Iconic characters and locations:</em> Include familiar characters and locations from the films, allowing players to interact with their favorite heroes, villains, and worlds.</li>
+        <li><em>High production values:</em> Feature impressive graphics, sound design, and gameplay mechanics, providing a polished and immersive gaming experience.</li>
         <li><em>Strong fan community:</em> The passionate fanbase has generated a wealth of fan art, fan fiction, and discussions that contribute to the series' enduring popularity.</li>
-        <li><em>Accessible gameplay:</em> Most Star Wars games are designed to be accessible to a wide audience, with varying levels of difficulty and gameplay options suitable for both casual and hardcore gamers.</li>
+        <li><em>Accessible gameplay:</em> Designed to be accessible to a wide audience, with varying levels of difficulty and gameplay options suitable for both casual and hardcore gamers.</li>
     </ul>
     <p><strong>Cons</strong></p>
     <ul>
-        <li><em>Inconsistent quality:</em> The Star Wars game series includes titles developed by various studios and published by different companies, resulting in a mixed level of quality and polish across the games.</li>
+        <li><em>Inconsistent quality:</em> Includes titles developed by various studios and published by different companies, resulting in a mixed level of quality and polish across the games.</li>
         <li><em>Licensing and availability:</em> Some older Star Wars games may not be readily available on modern gaming platforms or may have licensing issues, making it difficult for new players to experience the entire series.</li>
         <li><em>High expectations:</em> Given the popularity and fanbase of the Star Wars franchise, new game releases often come with high expectations, which can lead to disappointment if they fail to meet those expectations.</li>
         <li><em>Focus on specific eras:</em> Some Star Wars games may focus on specific time periods or characters, which may be a drawback for players who prefer to explore other aspects of the Star Wars universe.</li>
