--- a/game-pages/the-legend-of-zelda.html
+++ b/game-pages/the-legend-of-zelda.html
@@ -13,13 +13,13 @@
     <p><strong>The Legend of Zelda series, developed and published by Nintendo, is an iconic action-adventure video game franchise that first emerged in 1986. Renowned for its innovative gameplay, richly detailed game worlds, and enduring protagonist, the series has garnered a passionate fanbase over the decades. Each installment follows the adventures of the courageous hero, Link, as he embarks on a quest to save the kingdom of Hyrule and its beloved princess, Zelda, from the clutches of the malevolent force, often embodied by the recurring antagonist, Ganon. The series is praised for its groundbreaking game design, skillfully blending exploration, puzzle-solving, and combat, while incorporating unique items and abilities that have become synonymous with the franchise. Featuring an enchanting and memorable soundtrack, composed primarily by the legendary Koji Kondo, the Legend of Zelda series has left an indelible mark on the gaming world and continues to inspire and captivate players with each new installment.</strong></p>
     <p><strong>Pros</strong></p>
     <ul>
-        <li><em>Innovative gameplay:</em> The series has consistently pushed the boundaries of action-adventure game design, introducing new mechanics and gameplay elements that have influenced the broader gaming industry.</li>
-        <li><em>Engaging puzzles:</em> The Legend of Zelda games are known for their cleverly designed puzzles and dungeons, which challenge players' problem-solving skills and provide a satisfying sense of accomplishment.</li>
-        <li><em>Memorable characters:</em> The series features enduring and beloved characters, such as the courageous hero Link, the wise Princess Zelda, and the menacing villain Ganon, who have become iconic figures in gaming culture.</li>
-        <li><em>Richly detailed worlds:</em> The Legend of Zelda games are set in intricately designed game worlds, with deep lore and a sense of history that encourage exploration and discovery.</li>
-        <li><em>Iconic music:</em> The series is renowned for its captivating and memorable soundtracks, which have become an integral part of the gaming experience and contribute to the series' overall charm.</li>
+        <li><em>Innovative gameplay:</em> Consistently pushed the boundaries of action-adventure game design, introducing new mechanics and gameplay elements that have influenced the broader gaming industry.</li>
+        <li><em>Engaging puzzles:</em> Known for their cleverly designed puzzles and dungeons, which challenge players' problem-solving skills and provide a satisfying sense of accomplishment.</li>
+        <li><em>Memorable characters:</em> Features enduring and beloved characters, such as the courageous hero Link, the wise Princess Zelda, and the menacing villain Ganon, who have become iconic figures in gaming culture.</li>
+        <li><em>Richly detailed worlds:</em> Set in intricately designed game worlds, with deep lore and a sense of history that encourage exploration and discovery.</li>
+        <li><em>Iconic music:</em> Renowned for its captivating and memorable soundtracks, which have become an integral part of the gaming experience and contribute to the series' overall charm.</li>
         <li><em>High production values:</em> Nintendo is known for its commitment to quality, ensuring that each game in the series features polished graphics, sound design, and gameplay.</li>
-        <li><em>Wide appeal:</em> The series appeals to a diverse audience, with its accessible gameplay and engaging storylines, making it a popular choice for players of all ages and skill levels.</li>
+        <li><em>Wide appeal:</em> Appeals to a diverse audience, with its accessible gameplay and engaging storylines, making it a popular choice for players of all ages and skill levels.</li>
     </ul>
     <p><strong>Cons</strong></p>
     <ul>
@@ -28,7 +28,7 @@
         <li><em>Difficulty spikes:</em> Some Legend of Zelda games feature difficulty spikes or particularly challenging segments, which can be frustrating for players who struggle with certain aspects of the gameplay.</li>
         <li><em>Nostalgia-driven expectations:</em> The series' long-standing reputation and fanbase may create high expectations for new installments, leading to disappointment if a game fails to meet those expectations or deviates significantly from past titles.</li>
         <li><em>Accessibility:</em> Some older games in the series may not be readily available on modern gaming platforms, making it difficult for new players to experience the entire series.</li>
-        <li><em>Focus on console gaming:</em> The series has been primarily developed for Nintendo consoles, which may be a drawback for players who primarily game on other platforms.</li>
+        <li><em>Focus on console gaming:</em> Primarily developed for Nintendo consoles, which may be a drawback for players who primarily game on other platforms.</li>
         <li><em>Linear gameplay:</em> Some entries in the series have more linear gameplay, which may be a disadvantage for players who prefer open-world or non-linear experiences. However, recent titles like "The Legend of Zelda: Breath of the Wild" have moved toward a more open-world approach.</li>
     </ul>
 </body>
